Header initial commit

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -488,3 +488,10 @@ hr {
 }
 
 /* ***************************************************************** */
+
+.header-container {
+    height: 10vh;
+    background-color: #2f8be0;
+}
+
+/* ***************************************************************** */
