--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -3,7 +3,8 @@
     --nav-color: #17171d;
     --secondary-nav-color: #23232d;
     --icon-color: #8c8c8e;
-    --main-color:  #2f8be0;
+    /* --main-color:  #2f8be0; */
+    --main-color:  #64B5F6;
 }
 
 * {
@@ -13,6 +14,7 @@
 body {
     background-color: var(--bg-color);
     scrollbar-width: none;
+    scroll-behavior: smooth;
     font-family: 'Poppins', sans-serif;
 }
 
@@ -29,6 +31,10 @@ hr {
     height: 0.1px;
     background-color: #8c8c8e9d;
     margin: 0 auto;
+}
+
+section {
+    margin-top: 20px;
 }
 
 /* ***************************************************************** */
@@ -49,6 +55,11 @@ hr {
     cursor: pointer;
 }
 
+#sideMenuNavBarBtnIcon {
+    position: fixed;
+    z-index: 9;
+}
+
 /* ***************************************************************** */
 
 .user-info {
@@ -62,6 +73,7 @@ hr {
     box-shadow: 0 3px 8px 0 rgba(15, 15, 20, 0.2);
     transition: 0.55s ease-in-out;
     z-index: 9;
+    background-color: var(--bg-color);
 }
 
 .user-info.active {
@@ -490,8 +502,159 @@ hr {
 /* ***************************************************************** */
 
 .header-container {
-    height: 10vh;
-    background-color: #2f8be0;
+    height: 65vh;
+    width: 90vw;
+    margin-top: 20px;
+    background: url('../imgs/banner-bg.png') no-repeat center center fixed;
+    background-size: cover;
+    position: relative;
+}
+
+.header-banner {
+    width: 85%;
+    height: 80%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.header-banner-title {
+    height: 60%;
+    position: relative;
+}
+
+.header-banner-title h1 {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+    color: #fafafa;
+    font-family: 'Poppins', sans-serif;
+    font-weight: 800;
+    font-size: 46px;
+    letter-spacing: 1px;
+}
+
+.header-banner-code {
+    height: 20%;
+    position: relative;
+}
+
+.header-banner-code p {
+    width: 80%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+    font-family: 'Courier Prime', 'Courier New', Courier, monospace;
+    font-weight: 400;
+    letter-spacing: 1px;
+    color: #fafafa;
+}
+
+.header-banner-code span {
+    color: var(--main-color);
+    font-weight: 800;
+}
+
+.header-banner-btn {
+    height: 20%;
+    position: relative;
+}
+
+.header-banner-btn a {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+    text-decoration: none;
+    font-size: 12px;
+    font-weight: 600;
+    letter-spacing: 2px;
+    width: 50%;
+    height: 50px;
+    line-height: 50px;
+    color: var(--secondary-nav-color);
+    background-color: var(--main-color);
+}
+
+/* ***************************************************************** */
+
+.expertise-section span {
+    display: inline-block;
+    color: var(--main-color);
+    text-align: center;
+    width: 100%;
+    font-size: 20px;
+    font-weight: 600;
+}
+
+.expertise-section h6 {
+    color: #fafafa;
+    text-align: center;
+    font-size: 14px;
+    font-weight: 300;
+}
+
+/* ***************************************************************** */
+
+.services-section h5 {
+    text-align: center;
+    color: #fafafa;
+    margin-top: 10px;
+    margin-bottom: 0;
+}
+
+.services-section .row {
+    margin-left: 0;
+    margin-right: 0;
+}
+
+.service {
+    background-color: #2b2b35;
+    width: 90%;
+    margin: 0 auto;
+    margin-top: 25px;
+    padding: 20px;
+}
+
+.service h6 {
+    text-align: left;
+    color: #fafafa;
+    margin-bottom: 15px;
+}
+
+.service p {
+    color: var(--icon-color);
+    font-size: 12px;
+}
+
+.service a {
+    text-decoration: none;
+    color: var(--main-color);
+    font-size: 12px;
+    font-weight: 600;
+    letter-spacing: 2px;
+    opacity: 0.5;
+    transition: 0.5s ease;
+}
+
+.service a:hover {
+    font-size: 13px;
+    opacity: 1;
+}
+
+/* ***************************************************************** */
+
+.portfolio-section h5 {
+    text-align: center;
+    color: #fafafa;
+    margin-top: 10px;
+    margin-bottom: 0;
 }
 
 /* ***************************************************************** */
