--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -655,11 +655,36 @@ section {
     text-align: center;
 }
 
+.portfolio-menu {
+    width: 90%;
+    margin-top: 10px;
+    padding: 0;
+    list-style: none;
+    text-align: center;
+    margin-bottom: 10px;
+}
+
+.portfolio-menu li {
+    display: inline-block;
+    padding-bottom: 4px;
+    margin: 5px 10px;
+    text-transform: uppercase;
+    border: none;
+    cursor: pointer;
+    font-size: 14px;
+    font-weight: 400;
+    color: #fafafa;
+}
+
+li.p-active {
+    border-bottom: 2px solid var(--main-color);
+}
+
 .portfolio-section img {
     width: 90%;
     height: 200px;
     border: 1px solid red;
-    margin: 20px 0;
+    margin: 10px 0;
 }
 
 /* ***************************************************************** */
