large screens responsive design added

--- a/assets/css/circularProgressBar.css
+++ b/assets/css/circularProgressBar.css
@@ -155,3 +155,30 @@
 .progress.third.active .progress-left .progress-bar{
     animation: loading-0 0.4s linear forwards 1.8s;
 }
+
+@media (min-width:1200px) {
+    .progress .progress-right .progress-bar {
+        animation: loading-1 1.8s linear forwards;
+    }
+    .progress.first .progress-bar{
+        border-color: var(--main-color);
+    }
+    .progress.first .progress-left .progress-bar{
+        animation: loading-2 1.5s linear forwards 1.8s;
+    }
+    .progress.second .progress-bar{
+        border-color: var(--main-color);
+    }
+    .progress.second .progress-left .progress-bar{
+        animation: loading-3 1s linear forwards 1.8s;
+    }
+    .progress.third .progress-bar{
+        border-color: var(--main-color);
+    }
+    .progress.third .progress-right .progress-bar {
+        animation: loading-20 1.8s linear forwards;
+    }
+    .progress.third .progress-left .progress-bar{
+        animation: loading-0 0.4s linear forwards 1.8s;
+    }
+}
