--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -33,7 +33,8 @@ hr {
 }
 
 section {
-    margin-top: 20px;
+    margin-top: 30px;
+    margin-bottom: 30px;
 }
 
 /* ***************************************************************** */
@@ -610,9 +611,8 @@ section {
 
 .service {
     background-color: #2b2b35;
-    width: 90%;
     margin: 0 auto;
-    margin-top: 25px;
+    margin-top: 30px;
     padding: 20px;
 }
 
@@ -681,9 +681,8 @@ li.p-active {
 }
 
 .portfolio-section img {
-    width: 90%;
+    width: 100%;
     height: 200px;
-    border: 1px solid red;
     margin: 10px 0;
 }
 
