--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -44,8 +44,21 @@
         font-size: 18px;
     }
 
+    .service h6 {
+        font-size: 17px;
+    }
+
+    .service p {
+        font-size: 14px;
+    }
+
+    .service a {
+        font-size: 14px;
+    }
+
     .portfolio-section img {
-        margin-bottom: 25px;
+        width: 100%;
+        margin-bottom: 20px;
     }
 }
 
@@ -71,9 +84,13 @@
         width: 100%;
         margin-bottom: 20px;
     }
+    .contact-section form {
+        width: 70%;
+        margin: 0 auto;
+    }
 }
 
-@media (min-width:1500px) {
+@media (min-width:1800px) {
     .justify-lg-end {
         justify-content: end;
     }
@@ -88,7 +105,7 @@
 
     .user-info {
         overflow: scroll;
-        width: 350px;
+        width: 18vw;
         top: 0px;
         transform: translateX(290px);
     }
@@ -117,7 +134,7 @@
     }
 
     .side-menu {
-        width: 350px;
+        width: 18vw;
         top: 0;
         transform: translate(-290px);
         overflow: hidden;
