hr added before services section

--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -91,6 +91,10 @@
 }
 
 @media (min-width:1800px) {
+    hr {
+        width: 60%;
+    }
+
     .justify-lg-end {
         justify-content: end;
     }
