--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -529,14 +529,14 @@ section h5 {
 
 .header-banner-title {
     height: 60%;
-    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 80%;
+    margin: 0 auto;
 }
 
 .header-banner-title h1 {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
     text-align: center;
     color: #fafafa;
     font-family: 'Poppins', sans-serif;
@@ -547,37 +547,72 @@ section h5 {
 
 .header-banner-code {
     height: 20%;
-    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .header-banner-code p {
-    width: 80%;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    width: 100%;
     text-align: center;
     font-family: 'Courier Prime', 'Courier New', Courier, monospace;
     font-weight: 400;
     letter-spacing: 1px;
     color: #fafafa;
+    overflow: hidden;
 }
 
-.header-banner-code span {
+.header-banner-code i {
     color: var(--main-color);
+    font-family: 'Courier Prime', sans-serif;
+    font-style: normal;
     font-weight: 800;
+}
+
+.typewriter-wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.cursor {
+    display: inline-block;
+    width: 3px;
+    background-color: #ccc;
+    margin-left: 0.2rem;
+    animation: blink 1s infinite;
+}
+
+.cursor.typing {
+    animation: none;
+}
+
+@keyframes blink {
+    0% {
+        background-color: #ccc;
+    }
+    49% {
+        background-color: #ccc;
+    }
+    50% {
+        background-color: transparent;
+    }
+    99% {
+        background-color: transparent;
+    }
+    100% {
+        background-color: #ccc;
+    }
 }
 
 .header-banner-btn {
     height: 20%;
-    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .header-banner-btn a {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
     text-align: center;
     text-decoration: none;
     font-size: 12px;
