responsive scroll for user info bar modified

--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -108,7 +108,7 @@
     }
 
     .user-info {
-        overflow: scroll;
+        overflow: auto;
         width: 18vw;
         top: 0px;
         transform: translateX(290px);
