--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -74,6 +74,7 @@ section h5 {
     width: 290px;
     height: 100vh;
     overflow: scroll;
+    scrollbar-width: none;
     position: fixed;
     top: 0;
     left: -290px;
@@ -81,10 +82,6 @@ section h5 {
     transition: 0.55s ease-in-out;
     z-index: 9;
     background-color: var(--bg-color);
-}
-
-.user-info::-webkit-scrollbar {
-    display: none;
 }
 
 .user-info.active {
@@ -128,7 +125,10 @@ section h5 {
     width: 60%;
     border-radius: 50%;
     margin: 0 auto;
-    background: url('../imgs/maig.jpeg') no-repeat center center fixed;
+    background-image: url('../imgs/maig.jpeg');
+    background-repeat: no-repeat;
+    background-position-x: center;
+    background-position-y: center;
     background-size: cover;
     margin-bottom: 15px;
 }
