spanish/english feature added

--- a/assets/css/helpers.css
+++ b/assets/css/helpers.css
@@ -26,6 +26,10 @@
     display: flex;
 }
 
+.display-none {
+    display: none;
+}
+
 .justify-space-between {
     justify-content: space-between;
 }
