--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -145,16 +145,14 @@ section h5 {
 
 .user-info-residence {
     height: 100px;
-    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     background-color: var(--bg-color);
 }
 
 .user-info-residence-container {
     width: 90%;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
 }
 
 .user-info-residence h5 {
@@ -176,43 +174,35 @@ section h5 {
 
 .user-info-lang {
     height: 140px;
-    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     background-color: var(--bg-color);
 }
 
 .user-info-lang-container {
     width: 90%;
     height: 90%;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
 }
 
 /* ***************************************************************** */
 
 .user-info-skills {
     min-height: 280px;
-    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     background-color: var(--bg-color);
 }
 
 .user-info-skills-container {
     width: 85%;
     height: 90%;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
 }
 
 .skills-wrapper {
     width: 100%;
     height: 100%;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
     padding: 0 10px;
 }
 
@@ -324,7 +314,9 @@ section h5 {
 
 .user-info-knowledge {
     min-height: 110px;
-    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     background-color: var(--bg-color);
 }
 
@@ -349,27 +341,21 @@ section h5 {
 .user-info-knowledge-container {
     width: 85%;
     height: 90%;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
 }
 
 /* ***************************************************************** */
 
 .resume {
     height: 50px;
-    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     background-color: var(--bg-color);
 }
 
 .resume-container {
     height: 90%;
     width: 85%;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
     padding-top: 10px;
 }
 
@@ -438,16 +424,14 @@ section h5 {
 
 .side-menu-submenu-wrapper {
     height: 70%;
-    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .side-menu-submenu-container {
     height: 50%;
     width: 85%;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
 }
 
 .side-menu-submenu-container ul {
@@ -455,10 +439,6 @@ section h5 {
     width: 90%;
     margin: 0;
     padding: 50px 0;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -487,9 +467,12 @@ section h5 {
 .lang {
     height: 45px;
     width: 45px;
+    line-height: 45px;
     border-radius: 50%;
     margin-bottom: 5px;
-    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     background-color: var(--nav-color);
     cursor: pointer;
 }
@@ -499,11 +482,8 @@ section h5 {
 }
 
 .lang h6 {
-    position: absolute;
     color: #fafafa;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    margin-bottom: 0;
 }
 
 /* ***************************************************************** */
@@ -512,18 +492,16 @@ section h5 {
     height: 65vh;
     width: 90vw;
     margin-top: 20px;
-    background: url('../imgs/banner-bg.png') no-repeat center center fixed;
+    background: url('../imgs/banner-bg.png') no-repeat center center;
     background-size: cover;
-    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .header-banner {
     width: 85%;
     height: 80%;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
 }
 
 .header-banner-title {
