--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -400,7 +400,7 @@ section h5 {
     right: -290px;
     box-shadow: 0 3px 8px 0 rgba(15, 15, 20, 0.2);
     transition: 0.55s ease-in-out;
-    z-index: 9;
+    z-index: 9999;
 }
 
 .side-menu.active {
@@ -486,6 +486,26 @@ section h5 {
     margin-bottom: 0;
 }
 
+.en-fixed {
+    position: fixed;
+    right: 10px;
+    bottom: 40px;
+    z-index: 9;
+    opacity: 0.6;
+}
+
+.es-fixed {
+    position: fixed;
+    right: 10px;
+    bottom: 0;
+    z-index: 9;
+    opacity: 0.6;
+}
+
+.hidden {
+    opacity: 0;
+}
+
 /* ***************************************************************** */
 
 .header-container {
@@ -518,7 +538,7 @@ section h5 {
     color: #fafafa;
     font-family: 'Poppins', sans-serif;
     font-weight: 800;
-    font-size: 46px;
+    font-size: 40px;
     letter-spacing: 1px;
 }
 
