--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -3,7 +3,7 @@
     --nav-color: #17171d;
     --secondary-nav-color: #23232d;
     --icon-color: #8c8c8e;
-    --main-color:  #64B5F6;
+    --main-color: #64b5f6;
 }
 
 * {
@@ -18,7 +18,7 @@ body {
     background-color: var(--bg-color);
     scrollbar-width: none;
     scroll-behavior: smooth;
-    font-family: 'Poppins', sans-serif;
+    font-family: "Poppins", sans-serif;
 }
 
 a {
@@ -123,7 +123,7 @@ section h5 {
     width: 60%;
     border-radius: 50%;
     margin: 0 auto;
-    background-image: url('../imgs/maig.jpeg');
+    background-image: url("../imgs/maig.jpeg");
     background-repeat: no-repeat;
     background-position-x: center;
     background-position-y: center;
@@ -263,7 +263,7 @@ section h5 {
 
 @keyframes unfill {
     0% {
-        width: 80%
+        width: 80%;
     }
     100% {
         width: 0%;
@@ -512,7 +512,7 @@ section h5 {
     height: 65vh;
     width: 90vw;
     margin-top: 20px;
-    background: url('../imgs/banner-bg.png') no-repeat center center;
+    background: url("../imgs/banner-bg.png") no-repeat center center;
     background-size: cover;
     display: flex;
     justify-content: center;
@@ -536,7 +536,7 @@ section h5 {
 .header-banner-title h1 {
     text-align: center;
     color: #fafafa;
-    font-family: 'Poppins', sans-serif;
+    font-family: "Poppins", sans-serif;
     font-weight: 800;
     font-size: 40px;
     letter-spacing: 1px;
@@ -552,7 +552,7 @@ section h5 {
 .header-banner-code p {
     width: 100%;
     text-align: center;
-    font-family: 'Courier Prime', 'Courier New', Courier, monospace;
+    font-family: "Courier Prime", "Courier New", Courier, monospace;
     font-weight: 400;
     letter-spacing: 1px;
     color: #fafafa;
@@ -561,7 +561,7 @@ section h5 {
 
 .header-banner-code i {
     color: var(--main-color);
-    font-family: 'Courier Prime', sans-serif;
+    font-family: "Courier Prime", sans-serif;
     font-style: normal;
     font-weight: 800;
 }
@@ -654,6 +654,7 @@ section h5 {
     margin: 0 auto;
     margin-top: 30px;
     padding: 20px;
+    min-height: 280px;
 }
 
 .service h6 {
@@ -725,9 +726,30 @@ li.p-active {
 }
 
 .portfolio-section img {
-    width: 100%;
     height: 200px;
-    margin: 10px 0;
+    margin-top: 0;
+    margin-bottom: 20px;
+}
+
+.portfolio-container {
+    position: relative;
+    overflow: hidden;
+}
+
+.show-more-btn {
+    position: absolute;
+    top: -45px;
+    left: 15px;
+    background-color: rgba(0, 0, 0, 0.5);
+    padding: 10px;
+    z-index: 999;
+    transition: all 0.5s;
+    color: #fff;
+    text-decoration: none;
+}
+
+.portfolio-container:hover .show-more-btn {
+    top: 0px;
 }
 
 /* ***************************************************************** */
